syntax = "proto3";

option csharp_namespace = "GRPCServer";

package globalTemperature;

service GlobalTemperature {
	rpc GetMeasurementsForRegion (GetMeasurementsRequest) returns (stream MeasurementsModel);
}

message GetMeasurementsRequest {
	int32 regionId = 1;
}

message MeasurementsModel {
	int32 regionId = 1;
	double temperature = 2;
}
